# g-pay

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api-gateway/: Dockerfile  package.json
apps/api-gateway/src/: index.ts  routes.ts
apps/api-gateway/src/routes/: demo.ts
apps/dashboard/: package.json  vercel.json
apps/dashboard/src/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/src/app/api/: page.tsx
apps/dashboard/src/app/dashboard/: layout.tsx  page.tsx
apps/dashboard/src/app/deposits/: layout.tsx  page.tsx
apps/dashboard/src/app/deposits/[id]/: page.tsx
apps/dashboard/src/app/deposits/new/: page.tsx
apps/dashboard/src/app/docs/: page.tsx
apps/dashboard/src/components/: ApiKeyGate.tsx  AppHeader.tsx  AppSidebar.tsx  Header.tsx  Providers.tsx  PublicHeader.tsx
apps/dashboard/src/idl/: quarantine_vault.json
apps/dashboard/src/lib/: api.ts  auth.ts
config/: .gitignore  slices.example.json
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/indexer/: Cargo.toml  Dockerfile
crates/indexer/src/: config.rs  error.rs  lib.rs  main.rs  rpc_scan.rs  webhook.rs
crates/indexer/tests/: scan_match.rs
crates/oracle-adapter/: Cargo.toml
crates/oracle-adapter/src/: main.rs
crates/relayer/: Cargo.toml  Dockerfile
crates/relayer/src/: billing.rs  error.rs  lib.rs  main.rs  rate_limit.rs  relayer.rs  submit.rs
crates/stealth-core/: Cargo.toml
crates/stealth-core/src/: error.rs  keys.rs  lib.rs  scan.rs  stealth.rs
crates/stealth-core/tests/: roundtrip.rs  vectors.rs
deploy/: .env.example  Caddyfile  docker-compose.yml
deploy/migrations/: 001_init.sql
docs/: DEPLOY.md  DESIGN.md  RUNBOOK.md  VERCEL.md
programs/quarantine-vault/: Cargo.toml
programs/quarantine-vault/src/: constants.rs  error.rs  lib.rs  state.rs
programs/quarantine-vault/src/instructions/: attest.rs  deposit.rs  deposit_token.rs  initialize_vault.rs  mod.rs  refund.rs  refund_token.rs  release.rs  release_token.rs
programs/quarantine-vault/tests/: test_vault.rs
scripts/: bootstrap-local.sh  build-artifacts.sh  deploy-program-devnet.sh  deploy-server.sh
