[package]
name = "gpay-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Operator CLI for the g-pay vault — drive end-to-end flows on a local validator"

[[bin]]
name = "gpay-cli"
path = "src/main.rs"

[dependencies]
anchor-lang = { workspace = true }
quarantine-vault = { path = "../../programs/quarantine-vault", features = ["no-entrypoint"] }
stealth-core = { path = "../stealth-core" }

solana-client = "3"
solana-sdk = "3"
solana-commitment-config = "3"
solana-keypair = "3"
solana-signer = "3"
solana-transaction = "4"
solana-message = "3"
solana-instruction = "3"
solana-pubkey = "3"
solana-hash = "3"

anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
hex = { workspace = true }
rand = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
