[package]
name = "gpay-oracle-adapter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "AML attestor — Chainalysis/TRM/Range adapter that signs on-chain attestations"

[[bin]]
name = "gpay-oracle"
path = "src/main.rs"

[dependencies]
